# elfin-controller

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-plugin.yml
cmake/: basic_installer.cmake
resources/: ExperimentalBlurb.md
resources/content/patch_library/Bass/: Bass 01.elfin  Bass 02.elfin  Bass 04.elfin  Bass 05.elfin  Bass 06.elfin  Bass 08.elfin  Bass 09.elfin  Bass 11.elfin  Bass 13.elfin  Bass 15.elfin  Bass 19.elfin
resources/content/patch_library/Basses/: Bass 10.elfin  Bass 12.elfin  Bass 14.elfin  Bass 16.elfin  Bass 17.elfin  Bass 18.elfin  Bass 20.elfin  Bass 3.elfin  Bass 7.elfin
resources/content/patch_library/Brass/: Brass 01.elfin  Brass 02.elfin  Brass 03.elfin  Brass 04.elfin  Brass 05.elfin  Brass 07.elfin  Brass 08.elfin  Brass 10.elfin  Brass 6.elfin  Brass 9.elfin
resources/content/patch_library/Chimes/: Chimes 03.elfin  Chimes 05.elfin  Chimes 07.elfin  Chimes 1.elfin  Chimes 10.elfin  Chimes 11.elfin  Chimes 12.elfin  Chimes 13.elfin  Chimes 14.elfin  Chimes 15.elfin  Chimes 16.elfin  Chimes 2.elfin  Chimes 4.elfin  Chimes 6.elfin  Chimes 8.elfin  Chimes 9.elfin
resources/content/patch_library/FX/: FX 1.elfin  FX 11.elfin  FX 15.elfin  FX 16.elfin  FX 20.elfin  FX 23.elfin  FX 25.elfin  FX 28.elfin  FX 29.elfin  FX 3.elfin  FX 31.elfin  FX 32.elfin  FX 6.elfin  FX 7.elfin  FX 9.elfin
resources/content/patch_library/Keys/: Accordion.elfin  Harpsichord 03.elfin  Harpsichord 04.elfin  Harpsichord 1.elfin  Harpsichord 2.elfin  Keys 01.elfin  Keys 03.elfin  Keys 04.elfin  Keys 06.elfin  Keys 2.elfin  Keys 5.elfin  Keys 7.elfin  Keys 8.elfin  Steel 1.elfin  Steel 2.elfin
resources/content/patch_library/Leads/: Lead 12.elfin  Lead 14.elfin  Lead 16.elfin  Lead 17.elfin  Lead 20.elfin  Lead 24.elfin  Lead 25.elfin  Lead 26.elfin  Lead 27.elfin  Lead 30.elfin  Lead 33.elfin  Lead 34.elfin  Lead 36.elfin  Lead 38.elfin  Lead 39.elfin  Lead 40.elfin  SynthLead 01.elfin  SynthLead 02.elfin  SynthLead 03.elfin  SynthLead 04.elfin  SynthLead 05.elfin  SynthLead 06.elfin  SynthLead 07.elfin  SynthLead 08.elfin  SynthLead 09.elfin  SynthLead 10.elfin  SynthLead 11.elfin  SynthLead 13.elfin  SynthLead 15.elfin  SynthLead 18.elfin  SynthLead 19.elfin  SynthLead 21.elfin  SynthLead 22.elfin  SynthLead 23.elfin  SynthLead 28.elfin  SynthLead 29.elfin  SynthLead 31.elfin  SynthLead 32.elfin  SynthLead 35.elfin  SynthLead 37.elfin
resources/content/patch_library/Organ/: Organ 01.elfin  Organ 04.elfin  Organ 06.elfin
resources/content/patch_library/Organs/: Organ 10.elfin  Organ 11.elfin  Organ 12.elfin  Organ 13.elfin  Organ 2.elfin  Organ 3.elfin  Organ 5.elfin  Organ 7.elfin  Organ 8.elfin  Organ 9.elfin
resources/content/patch_library/Pads/: Pad 03.elfin  Pad 05.elfin  Pad 06.elfin  Pad 07.elfin  Pad 08.elfin  Pad 09.elfin  Pad 1.elfin  Pad 10.elfin  Pad 11.elfin  Pad 12.elfin  Pad 13.elfin  Pad 14.elfin  Pad 15.elfin  Pad 16.elfin  Pad 17.elfin  Pad 18.elfin  Pad 19.elfin  Pad 2.elfin  Pad 20.elfin  Pad 4.elfin
resources/content/patch_library/Percussion/: Perc 03.elfin  Perc 05.elfin  Perc 06.elfin  Perc 07.elfin  Perc 1.elfin  Perc 10.elfin  Perc 11.elfin  Perc 12.elfin  Perc 13.elfin  Perc 14.elfin  Perc 15.elfin  Perc 16.elfin  Perc 17.elfin  Perc 18.elfin  Perc 19.elfin  Perc 2.elfin  Perc 20.elfin  Perc 21.elfin  Perc 22.elfin  Perc 23.elfin  Perc 24.elfin  Perc 25.elfin  Perc 26.elfin  Perc 4.elfin  Perc 8.elfin  Perc 9.elfin
resources/content/patch_library/Pianos/: Piano 02.elfin  Piano 03.elfin  Piano 04.elfin  Piano 05.elfin  Piano 06.elfin  Piano 09.elfin  Piano 1.elfin  Piano 10.elfin  Piano 11.elfin  Piano 7.elfin  Piano 8.elfin
resources/content/patch_library/Plucks/: Pluck 01.elfin  Pluck 02.elfin  Pluck 06.elfin  Pluck 08.elfin  Pluck 10.elfin  Pluck 15.elfin  Pluck 16.elfin  Pluck 17.elfin  Pluck 18.elfin  Pluck 19.elfin  Pluck 20.elfin  Pluck 22.elfin  Pluck 24.elfin  Pluck 25.elfin  Pluck 27.elfin  Pluck 29.elfin  Pluck 30.elfin  Pluck 31.elfin  Pluck 33.elfin  Pluck 4.elfin  Pluck 6.elfin  Pluck 8.elfin
resources/content/patch_library/SFX/: SFX 02.elfin  SFX 04.elfin  SFX 05.elfin  SFX 08.elfin  SFX 10.elfin  SFX 12.elfin  SFX 13.elfin  SFX 14.elfin  SFX 17.elfin  SFX 18.elfin  SFX 19.elfin  SFX 21.elfin  SFX 22.elfin  SFX 24.elfin  SFX 26.elfin  SFX 27.elfin  SFX 30.elfin  SFX 33.elfin
resources/content/patch_library/Strings/: Strings 01.elfin  Strings 02.elfin  Strings 10.elfin  Strings 11.elfin  Strings 12.elfin  Strings 13.elfin  Strings 4.elfin  Strings 5.elfin  Strings 7.elfin  Strings 8.elfin  Strings 9.elfin
resources/content/patch_library/Vox/: Vox 01.elfin  Vox 05.elfin  Vox 07.elfin  Vox 08.elfin  Vox 10.elfin  Vox 11.elfin  Vox 2.elfin  Vox 3.elfin  Vox 4.elfin  Vox 6.elfin  Vox 9.elfin
resources/content/patch_library/Wind/: Flute 01.elfin  Flute 03.elfin  Flute 04.elfin  Reed 01.elfin  Wind 08.elfin
resources/content/patch_library/Winds/: Flute 2.elfin  Wind 1.elfin  Wind 2.elfin  Wind 3.elfin  Wind 4.elfin  Wind 5.elfin  Wind 6.elfin  Wind 7.elfin
resources/installer/: ZipReadme.txt
scripts/: fix_file_comments.pl  fix_header_guards.pl
src/: CMakeLists.txt  CustomWidgets.h  ElfinAbout.cpp  ElfinAbout.h  ElfinEditor.cpp  ElfinEditor.h  ElfinKnob.cpp  ElfinKnob.h  ElfinMainPanel.cpp  ElfinMainPanel.h  ElfinProcessor.cpp  ElfinProcessor.h  ParamSources.h  PresetManager.cpp  PresetManager.h  SubPanels.h  UIConstants.h  configuration.cpp  configuration.h
